# lytr

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: EXPERIMENT_PILOT_LLM_AB.md  IMPLEMENTATION_STATUS.md  LIR_AST_JSON.md  LIR_PRODUCT_STRATEGY.md  LIR_V1_SPEC.md  LLVM_ABI.md  LYTR_CHARTER_DRAFT.md  LYTR_CORE_CALCULUS_DRAFT.md  LYTR_EFFECTS_AND_FFI_DRAFT.md  LYTR_GLOBAL_IMPLEMENTATION_PLAN.md  LYTR_GOALS_AND_TIERS.md  LYTR_LOWERING_SKETCH.md  LYTR_MEMORY_OPTIONS_DRAFT.md  LYTR_PLATFORM_AND_EDITIONS_DRAFT.md  LYTR_PRODUCTION_READINESS.md  LYTR_QUALITY_AND_SECURITY.md  LYTR_SEMANTICS_AND_UB_DRAFT.md  LYTR_STDLIB_CHARTER_DRAFT.md  LYTR_TOOLING_TRACK.md  NAMING.md  PHASE5_BOOTSTRAP.md  WASM_ABI.md  codegen_subset.json
eval/: BASELINE.md  README.md  lytr_manifest.json  manifest.json  pilot_comparison.py  pilot_prompts.py  pilot_regression.py  pilot_report.py  pilot_thesis_metrics.py  prompt_token_split.py  requirements-eval.txt  run_comparison.py  run_llm_eval.py  run_llm_lytr_eval.py  run_llm_python_eval.py  run_local.sh  run_lytr_tier.py  run_pilot_ab.py  run_tier_a.py  summarize_llm_tracks.py  tier_a_lib.py
examples/: if_block.lytr  let_if.lytr  match.lytr  minimal.lytr
schemas/: lir_ast_v1.schema.json
src/: ast.rs  ast_json.rs  error.rs  format.rs  input_parse.rs  interp.rs  lex.rs  lib.rs  llvm_ir.rs  main.rs  parse.rs  types.rs  wasm.rs
tests/: ast_json_roundtrip.rs  codegen_coverage.rs  format_canonical.rs  input_parse.rs  llvm_emit.rs  llvm_golden.rs  lytr_bootstrap.rs  parse_header.rs  smoke.rs  wasm_golden.rs
(+93 files in other folders)
