[package]
name = "lir"
version = "0.1.0"
edition = "2021"
description = "LYTR monorepo: LIR (fast data-processing language) toolchain; LYTR general-purpose language planned (docs/LYTR_GLOBAL_IMPLEMENTATION_PLAN.md)"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

[dev-dependencies]
wasmi = "1.0.9"

[[bin]]
name = "lir"
path = "src/main.rs"

[lib]
name = "lir"
path = "src/lib.rs"
